@@ -104,6 +104,32 @@ See the variable `align-rules-list' for more details.")
           inferior-ruby-prompt-pattern "^>> ")
     (pop-to-buffer abuf)))
 
+(defun complete-ruby-method (prefix &optional maxnum)
+  (if (capital-word-p prefix)
+      (let* ((cmd "x = []; ObjectSpace.each_object(Class){|i| x << i.to_s}; x.map{|i| i.match(/^%s/) ? i.gsub(/^%s/, '') : nil }.compact.sort{|x,y| x.size <=> y.size}")
+             (cmd (if maxnum (concat cmd (format "[0...%s]" maxnum)) cmd)))
+        (el4r-ruby-eval (format cmd prefix prefix)))
+    (save-excursion
+      (goto-char (- (point) (+ 1 (length prefix))))
+      (when (and (looking-at "\\.")
+                 (capital-word-p (word-at-point))
+                 (el4r-ruby-eval (format "::%s rescue nil" (word-at-point))))
+        (let* ((cmd "%s.public_methods.map{|i| i.match(/^%s/) ? i.gsub(/^%s/, '') : nil }.compact.sort{|x,y| x.size <=> y.size}")
+               (cmd (if maxnum (concat cmd (format "[0...%s]" maxnum)) cmd)))
+          (el4r-ruby-eval (format cmd (word-at-point) prefix prefix)))))))
+
+(setq completion-dynamic-syntax-alist
+  '(
+    ;; word constituents add to current completion
+    (?w . (add t word))
+    (?_ . (accept t none))
+    ;; whitespace and punctuation chars accept current completion
+    (?  . (accept t none))
+    (?. . (accept t none))
+    ;; anything else rejects the current completion
+    (t  . (reject t none))))
+
+
 ;; flymake ruby support
 
 (require 'flymake)
